noinst_PROGRAMS = parse_xml create_dom_tree copy_dom_tree sax_parser part_of_dom_tree

parse_xml_LDADD = $(top_builddir)/src/libiksemelpp.la
parse_xml_SOURCES = parse_xml.cpp

create_dom_tree_LDADD = $(top_builddir)/src/libiksemelpp.la
create_dom_tree_SOURCES = create_dom_tree.cpp

copy_dom_tree_LDADD = $(top_builddir)/src/libiksemelpp.la
copy_dom_tree_SOURCES = copy_dom_tree.cpp

sax_parser_LDADD = $(top_builddir)/src/libiksemelpp.la
sax_parser_SOURCES = sax_parser.cpp

part_of_dom_tree_LDADD = $(top_builddir)/src/libiksemelpp.la
part_of_dom_tree_SOURCES = part_of_dom_tree.cpp
