AC_PREREQ([2.68])
AC_INIT([yali-branding-pardus], [2011.0], [http://bugs.pardus.org.tr])
AM_INIT_AUTOMAKE([1.9 foreign dist-bzip2 no-dist-gzip])

IT_PROG_INTLTOOL([0.35.0])

GETTEXT_PACKAGE=yali-branding-pardus
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"],
                   [The domain to use with gettext])

AC_CONFIG_FILES([
                 Makefile
                 po/Makefile.in
                 ])
AC_OUTPUT
